--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "axios": "^1.4.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "formik": "^2.4.3",
+    "image-conversion": "^2.1.1",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.15.0",
+    "react-tooltip": "^5.21.1",
+    "tailwindcss": "3.3.3",
+    "yup": "^1.2.0"
   }
 }
