--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-next": "13.4.19",
     "formik": "^2.4.3",
     "image-conversion": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
