--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.15.0",
     "react-tooltip": "^5.21.1",
